[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/choose_skill_wheel.png" type="Texture" id=1]
[ext_resource path="res://scenes/SkillWheel.gd" type="Script" id=2]
[ext_resource path="res://sound_effects/close_skill_wheel.mp3" type="AudioStream" id=3]
[ext_resource path="res://sound_effects/open_skill_wheel.mp3" type="AudioStream" id=4]
[ext_resource path="res://shaders/screen/TV.shader" type="Shader" id=5]
[ext_resource path="res://scenes/DashSkill.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/vertJerkOpt = 0.2
shader_param/vertMovementOpt = 0.0
shader_param/bottomStaticOpt = 0.0
shader_param/bottomStaticStrenth = 0.7
shader_param/scalinesOpt = 0.8
shader_param/rgbOffsetOpt = 0.2
shader_param/horzFuzzOpt = 0.15

[sub_resource type="Animation" id=1]
resource_name = "wheel"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/ChooseSkillWheel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/CenterContainer/ChooseSkillWheel:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="SkillWheel" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WheelEffect" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="ChooseSkillWheel" type="Sprite" parent="CanvasLayer/CenterContainer"]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="DashSkill" parent="CanvasLayer" instance=ExtResource( 6 )]
position = Vector2( 630, 133 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/wheel = SubResource( 1 )

[node name="CloseWheelAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="OpenWheelAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="skill_menu_closed" from="." to="CanvasLayer/DashSkill" method="_on_SkillWheel_skill_menu_closed"]
[connection signal="skill_menu_opened" from="." to="CanvasLayer/DashSkill" method="_on_SkillWheel_skill_menu_opened"]
[connection signal="skill_equipped" from="CanvasLayer/DashSkill" to="." method="_on_DashSkill_skill_equipped"]
